# interactive-voice-message-poc

./: .gitignore  README.md  app.py  config-sample.toml  flake.nix  pyproject.toml  requirements-dev.txt  requirements.txt  tests.py
goldens/: menu_callback_1.yaml  menu_callback_2.yaml  menu_callback_3.yaml  menu_callback_9.yaml  start_call.yaml  voice_reply_callback.yaml
